TS-2930: missing hostname in ts.client_request.get_url() in lua plugin